	involved passing of empty '...' arguments, and was spotted
	when using apply(x, 2, log).

    o	par() no longer warns unnecessarily when asked to set new=FALSE
	on an unused graphics device.

    o	plot.formula() was not passing on '...' when used with a
	one-sided formula.

	plot.formula() was not accepting expressions for annotations
	passed to title().  (PR#10525)



		CHANGES IN R VERSION 2.6.1


NEW FEATURES

    o	The "data.frame" and "factor" methods for [[ now support
	the 'exact' argument introduced in 2.6.0.

    o	plot.lm() gains a new argument 'cex.caption' to allow the
	size of the captions to be controlled.

    o	A series of changes make the CHARSXP cache introduced in 2.6.0
	faster (and in some cases many times faster) in sessions with
	a large number (e.g. a million) of unique character strings,
	and also if there are many empty strings.

    o	embedFonts(), bitmap() and dev2bitmap() explicitly turn off
	auto-rotation in Ghostscript when generating PDF.

    o	The canonical architecture is no longer checked when loading
	packages using a non-empty sub-architecture, since it is
	possible to (e.g.) build packages for i386-pc-linux-gnu on both
	that architecture and on x86_64-unknown-linux-gnu.

    o	Deparsing will (if option warnIncomplete is set) warn on
	strings longer than the parser limit (8192 bytes).

    o	url() now uses the UserAgent header in http transactions in
	the same way as download.file() (making use of option
	"HTTPUserAgent").


BUG FIXES

    o	iconv() is again able to translate character strings with
	embedded nuls (such as those in UCS-2).

    o	new.packages() and update.packages() failed when called on an
	empty library, since old.packages() threw an error.
	old.packages() now returns NULL (as documented) in that case.

    o	Builds on Mac OS X 10.4 or higher now allocate enough space
	in the binary headers to relocate dependent libraries into the
	framework.

    o	R CMD build now computes the exclusion list on the copy it