@@ -64,7 +64,12 @@ double attribute_hidden pnchisq_raw(double x, double f, double theta, double err
     /*= -708.3964 for IEEE double precision */
 
     if (x <= 0.)
+    {
+        if (x == 0. && f == 0.)
+            return lower_tail ? exp(-0.5 * theta) : -expm1(-0.5 * theta);
+        /* x < 0  or  x==0, f > 0 */
         return lower_tail ? 0. : 1.;
+    }
     if (!R_FINITE(x))
         return lower_tail ? 1. : 0.;
 
