@@ -412,6 +412,9 @@ BUG FIXES
 	plot.formula() was not accepting expressions for annotations
 	passed to title().  (PR#10525)
 
+    o	pchisq(x, df=0, ncp=L) now returns the correct limit exp(-L/2) for
+	x=0 and is no longer returning NaN for x > 0, L < 80.  (PR#10551)
+
 
 
 		CHANGES IN R VERSION 2.6.1
